--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
     transition: all 0.6s ease-out;
 }
 .navbar.scrolled {
-    background: #e6e6e6e0; /* IE */
-    background: #e6e6e6e0; /* NON-IE */
+    background: #464646e0; /* IE */
+    background: #464646e0; /* NON-IE */
 }
 .border-bottom {
     color:aliceblue;
@@ -16,4 +16,7 @@
     width: 100%;
     height: 25vh;
     object-fit: cover;
+}
+a, a:hover {
+    color: inherit;
 }
